# OpenCLFluids

./: .gitignore  CMakeLists.txt  Makefile  OpenCLManager.cpp  OpenCLManager.h  OpenCLUtil.cpp  OpenCLUtil.h  README.md  cl-helper.c  cl-helper.h  cl_solver.h  fragShader.glsl  kernels.cl  main.c  main.cpp  main_glut.c  notes.txt  second_order_solver.h  vertShader.glsl
GLLib/: glhelper.cpp  glhelper.h  mesh.cpp  mesh.h
KDSLib/: color.h  glhelper.cpp  glhelper.h  glmesh.h  glprogram.cpp  glprogram.h  glutil.cpp  glutil.h  test.h  utils.h  vector2.h  vector3.h  vertex.h
Xcode/OpenCLFluids.xcodeproj/: project.pbxproj
Xcode/OpenCLFluids.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/OpenCLFluids.xcodeproj/project.xcworkspace/xcuserdata/kristofe.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/OpenCLFluids.xcodeproj/xcuserdata/kristofe.xcuserdatad/xcschemes/: OpenCLFluids.xcscheme  xcschememanagement.plist
freeglut/lib/: freeglut.exp  freeglut.lib  freeglut_static.lib
writeup/: paper.bib  paper.tex  presentation.ppt
